--- a/config/cable.yml
+++ b/config/cable.yml
@@ -8,3 +8,7 @@ production:
   adapter: redis
   url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
   channel_prefix: hplace_production
+
+production:
+  adapter: redis
+  url: <%= ENV['REDISCLOUD_URL'] %>
