--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.3.1",
     "flatpickr": "^4.6.3",
     "jquery": "^3.4.1",
+    "pluralize": "^8.0.0",
     "popper.js": "^1.16.0",
     "typed.js": "^2.0.11"
   },
