--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@rails/webpacker": "^4.2.0",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
+    "datepicker": "^0.0.0",
     "flatpickr": "^4.6.3",
     "jquery": "^3.4.1",
     "pluralize": "^8.0.0",
