--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,5 +1,5 @@
 meta_product_name: "hplace"
 meta_title: "Hplace - Meet Share and Care"
 meta_description: "Hplace est une application de rencontre entre patients."
-meta_image: "photo-og.jpeg" # should exist in `app/assets/images/`
+meta_image: "photo-og.jpg" # should exist in `app/assets/images/`
 twitter_account: ""   # required for Twitter Cards
