--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,5 +1,5 @@
 meta_product_name: "hplace"
 meta_title: "Hplace - Meet Share and Care"
-meta_description: "Hplace est une application de rencontre entre patients."
+meta_description: "Hplace est une application de rencontres   entre patients."
 meta_image: "og-logo.png" # should exist in `app/assets/images/`
 twitter_account: ""   # required for Twitter Cards
